--- a/tour.html
+++ b/tour.html
@@ -5,10 +5,11 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>my-sajec-tour</title>
+    <link rel="stylesheet" href="style.css">
 </head>
 <body>
-    <div>
-        <h1> welcome visit our sajec </h1>
+    <div class="blog">
+        <h1> welcome to visit our sajec </h1><hr>
     <p>Lorem ipsum, dolor sit amet consectetur adipisicing elit. Eius recusandae perferendis tenetur quasi eaque similique cupiditate molestias facere quisquam ut nam quae mollitia et laborum voluptates, aut voluptatum, eligendi iure dolorum, at delectus exercitationem sequi maxime hic! Eius, facilis excepturi voluptates vitae sapiente, facere accusantium porro officiis amet laudantium qui molestias laboriosam tempore voluptate deleniti necessitatibus. Asperiores odio dolore natus fugit a sint enim nulla error at minima beatae adipisci, ratione in earum ea modi quasi quo blanditiis! Fuga ad blanditiis quis rem itaque possimus quia ullam incidunt placeat, rerum tempore, quam beatae nemo facere totam fugiat illo! Incidunt, explicabo.</p>
     </div>
 </body>
