--- a/tour.html
+++ b/tour.html
@@ -12,6 +12,8 @@
         <h1> welcome to visit our sajec </h1><hr>
     <p>Lorem ipsum, dolor sit amet consectetur adipisicing elit. Eius recusandae perferendis tenetur quasi eaque similique cupiditate molestias facere quisquam ut nam quae mollitia et laborum voluptates, aut voluptatum, eligendi iure dolorum, at delectus exercitationem sequi maxime hic! Eius, facilis excepturi voluptates vitae sapiente, facere accusantium porro officiis amet laudantium qui molestias laboriosam tempore voluptate deleniti necessitatibus. Asperiores odio dolore natus fugit a sint enim nulla error at minima beatae adipisci, ratione in earum ea modi quasi quo blanditiis! Fuga ad blanditiis quis rem itaque possimus quia ullam incidunt placeat, rerum tempore, quam beatae nemo facere totam fugiat illo! Incidunt, explicabo.</p>
     </div>
-    <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Sed dolore dolor eveniet vitae animi. Maxime ipsam iusto, totam facere vitae quia quibusdam beatae provident rerum! Placeat maiores doloribus nobis voluptatibus impedit hic possimus corporis, mollitia deserunt ratione esse iusto iste voluptatem amet rem sapiente odit nesciunt distinctio saepe dolorem. Ea!</p>
+    <p>
+        Aouther name :<small>sobahan ali</small>
+    </p>
 </body>
 </html>
